# crewai_extrachallenge

./: .env.example  .gitignore  Agentes Autônomos – Relatório da Atividade Extra.md  CLAUDE.md  DATABASE_CONVERTER_KEY_FIX.md  DETERMINISTIC_IMAGE_GENERATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  QUICK_START_IMAGE_FIX.md  Questions.md  README.md  RELIABILITY_IMPROVEMENTS.md  SQLITE_IMPLEMENTATION_PLAN.md  TEMPERATURE_FINAL_SOLUTION.md  plan.md  pyproject.toml
docs/: AGENT_MODEL_CONSISTENCY_FIX.md  CHAT_HANG_FIX.md  DATABASE_APPROACH_ANALYSIS.md  IMAGE_GENERATION_FIX_SUMMARY.md  PHASE5_TEST_RESULTS.md  SCALABILITY_ANALYSIS.md  SQLITE_IMPLEMENTATION_COMPLETE.md  TEMPERATURE_ACTUAL_BEHAVIOR.md  TEMPERATURE_CONFIGURATION_GUIDE.md
src/crewai_extrachallenge/: crew.py  main.py
src/crewai_extrachallenge/config/: agents.yaml  database_config.py  tasks.yaml
src/crewai_extrachallenge/tools/: db_statistical_analysis_tool.py  guaranteed_visualizations.py  hybrid_data_tool.py  image_verification_tool.py  markdown_formatter_tool.py  nl2sql_tool_config.py  statistical_analysis_tool.py  task_validation_tool.py  visualization_tool.py
src/crewai_extrachallenge/utils/: csv_to_sqlite.py  db_helper.py
streamlit_app/: DATABASE_PATH_FIX.md  README.md  __init__.py  app.py  requirements.txt  run_app.sh
streamlit_app/components/: chat_interface.py  database_converter.py  dataset_config.py  report_generator.py
streamlit_app/config/: streamlit_config.py
streamlit_app/utils/: chat_agent.py  crew_runner.py  file_validator.py  session_manager.py
tests/: benchmark_performance.py  test_database_integration.py
