[project]
name = "crewai_extrachallenge"
version = "0.1.0"
description = "crewai_extrachallenge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.75.0",
    "crewai[tools]>=0.201.1,<1.0.0",
]

[project.scripts]
crewai_extrachallenge = "crewai_extrachallenge.main:run"
run_crew = "crewai_extrachallenge.main:run"
train = "crewai_extrachallenge.main:train"
replay = "crewai_extrachallenge.main:replay"
test = "crewai_extrachallenge.main:test"
analyze_dataset = "crewai_extrachallenge.main:analyze_dataset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
