[project]
name = "crewai_extrachallenge"
version = "0.1.0"
description = "crewai_extrachallenge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[sqlalchemy]>=0.75.0",
    "crewai[tools]>=0.201.1,<1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pymarkdownlnt>=0.9.32",
    "streamlit>=1.50.0",
    "plotly>=6.3.0",
    "psutil>=7.1.0",
]

[project.scripts]
crewai_extrachallenge = "crewai_extrachallenge.main:run"
run_crew = "crewai_extrachallenge.main:run"
train = "crewai_extrachallenge.main:train"
replay = "crewai_extrachallenge.main:replay"
test = "crewai_extrachallenge.main:test"
analyze_dataset = "crewai_extrachallenge.main:analyze_dataset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
